apps/hash-graph/lib/query-builder-derive/tests/ui/fail/tuple_multiple.stderr
error: unable to determine reference to `Nested`, more than a single tuple element
 --> tests/ui/fail/tuple_multiple.rs:6:5
  |
6 |     Nested(u8, u16),
  |     ^^^^^^
